Bug 313568 - [select tool] no ant-path visible with OpenGL canvas, ( Nvidia driver )
Summary: [select tool] no ant-path visible with OpenGL canvas, ( Nvidia driver )
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-20 15:17 UTC by David REVOY
Modified: 2013-04-06 11:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A video about the Lasso Tool + OpenGl display bug (726.76 KB, video/webm)
2013-01-20 15:17 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-01-20 15:17:51 UTC
Created attachment 76582 [details]
A video about the Lasso Tool + OpenGl display bug

== scenario ==
 in OpenGL canvas ; take the lasso tool, and trace a selection on the canvas. 

== effect : ==
the whole path is not displayed , only a last segment who follow the cursor ( watch video attached )


Branch : Transform ( but may also be in Master )
Gfx Card : Nvidia GT220  - Driver , proprio 310
Comment 1 Dmitry Kazakov 2013-01-20 15:40:43 UTC
It's very recent bug. I didn't have it before merging master into my branch
Comment 2 Dmitry Kazakov 2013-01-20 15:51:51 UTC
Argh... looks like this is a regression from a opengl-non-bending-line patch :(
Comment 3 Dmitry Kazakov 2013-01-21 07:41:39 UTC
Git commit 2aa12aa8307497ef37f85b0f38b5de69d9bd18a5 by Dmitry Kazakov.
Committed on 21/01/2013 at 08:26.
Pushed by dkazakov into branch 'krita-fixed-transform-kazakov'.

Fixed a flickering bug caused by disabling Double Buffering

Now disabling the Double Buffering is the last resort for the
workaround of bended lines. First, we try to disable VSync and only
if it fails we disable Double Buffering.

M  +22   -7    krita/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -4    krita/ui/opengl/kis_opengl_canvas2_p.h

http://commits.kde.org/calligra/2aa12aa8307497ef37f85b0f38b5de69d9bd18a5
Comment 4 Dmitry Kazakov 2013-01-21 07:49:05 UTC
Git commit ee4b1324a6bbfac0c8667e31bbd2bb79417d0f8f by Dmitry Kazakov.
Committed on 21/01/2013 at 08:26.
Pushed by dkazakov into branch 'master'.

Fixed a flickering bug caused by disabling Double Buffering

Now disabling the Double Buffering is the last resort for the
workaround of bended lines. First, we try to disable VSync and only
if it fails we disable Double Buffering.

M  +22   -7    krita/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -4    krita/ui/opengl/kis_opengl_canvas2_p.h

http://commits.kde.org/calligra/ee4b1324a6bbfac0c8667e31bbd2bb79417d0f8f
Comment 5 Dmitry Kazakov 2013-01-24 11:38:09 UTC
Git commit 7a9b7adda3ae13388eb52d499a47e6e3b8254afe by Dmitry Kazakov.
Committed on 21/01/2013 at 08:26.
Pushed by dkazakov into branch 'calligra/2.6'.

Fixed a flickering bug caused by disabling Double Buffering

Now disabling the Double Buffering is the last resort for the
workaround of bended lines. First, we try to disable VSync and only
if it fails we disable Double Buffering.

M  +22   -7    krita/ui/opengl/kis_opengl_canvas2.cpp
M  +2    -4    krita/ui/opengl/kis_opengl_canvas2_p.h

http://commits.kde.org/calligra/7a9b7adda3ae13388eb52d499a47e6e3b8254afe
Comment 6 David REVOY 2013-04-06 09:20:56 UTC
[ New update ]

After a system update ( driver and most KDE component ) on Mint KDE ( using default repo ) , and a new morning build of Krita GIT , I have no selection again when I launch Krita from a menu ( KDE favorite , or Alt+F2 etc... ). 
:-/
But ! ... If I launch Krita from a terminal, I have ant-path displayed when I perform a selection; so no-bug. Same if I launch Krita with a fake argument, as 'krita test' ( it will open a default canvas named test ). 
 
... I don't have 2 Krita installed, I assure it's the same compiled version launched in both case ... Logic ?
Comment 7 David REVOY 2013-04-06 11:33:59 UTC
[Solution] 

It appears to be solved using this methods :
For Griatch on IRC :  Check of 'Vsync' on the nvidia driver setting panel ( nvidia-settings )
For me : Check of 'Vsync' on the nvidia driver setting panel ( nvidia-settings ) + upgrading kernel ( sudo apt-get update && sudo apt-get dist-upgrade )