Fixed a flickering bug caused by disabling Double Buffering

Now disabling the Double Buffering is the last resort for the
workaround of bended lines. First, we try to disable VSync and only
if it fails we disable Double Buffering.

BUG:313568